// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageAlert tone: error renders correctly 1`] = `
<div>
  <div
    class="css-4co8rc-boxStyles-PageAlert"
  >
    <div
      class="css-18vqq3k-boxStyles-PageAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Error"
        class="css-lq07bo-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.4661 0.5C16.7332 0.5 16.9893 0.6069 17.1771 0.796862L23.2111 6.89871C23.3962 7.08591 23.5 7.33857 23.5 7.60185V16.3935C23.5 16.6595 23.394 16.9146 23.2055 17.1023L17.0712 23.2087C16.8838 23.3953 16.6301 23.5 16.3657 23.5H7.63889C7.37177 23.5 7.11576 23.3931 6.92792 23.2032L0.789033 16.9968C0.60386 16.8095 0.5 16.5569 0.5 16.2935V7.60646C0.5 7.34045 0.605983 7.08541 0.794505 6.89774L6.92885 0.791284C7.11625 0.604732 7.36991 0.5 7.63434 0.5H16.4661ZM16.7071 7.29289C17.0976 7.68342 17.0976 8.31658 16.7071 8.70711L13.4142 12L16.7071 15.2929C17.0976 15.6834 17.0976 16.3166 16.7071 16.7071C16.3166 17.0976 15.6834 17.0976 15.2929 16.7071L12 13.4142L8.70711 16.7071C8.31658 17.0976 7.68342 17.0976 7.29289 16.7071C6.90237 16.3166 6.90237 15.6834 7.29289 15.2929L10.5858 12L7.29289 8.70711C6.90237 8.31658 6.90237 7.68342 7.29289 7.29289C7.68342 6.90237 8.31658 6.90237 8.70711 7.29289L12 10.5858L15.2929 7.29289C15.6834 6.90237 16.3166 6.90237 16.7071 7.29289Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-ic9f31-boxStyles-PageAlert"
    >
      <div
        class="css-g6k1ma-boxStyles"
      >
        <h2
          class="css-1at50fi-boxStyles-PageAlertTitle"
        >
          There is a problem
        </h2>
        <ul
          class="css-1qfj7jm-UnorderedList"
        >
          <li
            class="css-1sudq1l-boxStyles-ListItem"
          >
            <a
              class="css-koqz57-TextLink"
              href="#"
            >
              Full name must not be empty
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageAlert tone: info renders correctly 1`] = `
<div>
  <div
    class="css-4eblwe-boxStyles-PageAlert"
  >
    <div
      class="css-10lvnwv-boxStyles-PageAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Information"
        class="css-lq07bo-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1C5.9 1 1 5.9 1 12C1 18.1 5.9 23 12 23C18.1 23 23 18.1 23 12C23 5.9 18.1 1 12 1ZM12 18C11.4477 18 11 17.5523 11 17V11C11 10.4477 11.4477 10 12 10C12.5523 10 13 10.4477 13 11V17C13 17.5523 12.5523 18 12 18ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-ic9f31-boxStyles-PageAlert"
    >
      <div
        class="css-g6k1ma-boxStyles"
      >
        <h2
          class="css-1at50fi-boxStyles-PageAlertTitle"
        >
          Notice
        </h2>
        <p
          class="css-dbscsh-boxStyles"
        >
          All vacancies close on the advertised closing date unless otherwise specified.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageAlert tone: success renders correctly 1`] = `
<div>
  <div
    class="css-1fz8glh-boxStyles-PageAlert"
  >
    <div
      class="css-iwdduc-boxStyles-PageAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Success"
        class="css-lq07bo-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-ic9f31-boxStyles-PageAlert"
    >
      <div
        class="css-g6k1ma-boxStyles"
      >
        <h2
          class="css-1at50fi-boxStyles-PageAlertTitle"
        >
          Submission successful
        </h2>
        <p
          class="css-dbscsh-boxStyles"
        >
          Your application has been successfully submitted.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageAlert tone: warning renders correctly 1`] = `
<div>
  <div
    class="css-rl6354-boxStyles-PageAlert"
  >
    <div
      class="css-ddla0z-boxStyles-PageAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Warning"
        class="css-lq07bo-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-ic9f31-boxStyles-PageAlert"
    >
      <div
        class="css-g6k1ma-boxStyles"
      >
        <h2
          class="css-1at50fi-boxStyles-PageAlertTitle"
        >
          Browser out of date
        </h2>
        <p
          class="css-dbscsh-boxStyles"
        >
          Your web browser is out of date.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageAlert with a close button renders correctly 1`] = `
<div>
  <div
    class="css-4eblwe-boxStyles-PageAlert"
  >
    <div
      class="css-10lvnwv-boxStyles-PageAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Information"
        class="css-lq07bo-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1C5.9 1 1 5.9 1 12C1 18.1 5.9 23 12 23C18.1 23 23 18.1 23 12C23 5.9 18.1 1 12 1ZM12 18C11.4477 18 11 17.5523 11 17V11C11 10.4477 11.4477 10 12 10C12.5523 10 13 10.4477 13 11V17C13 17.5523 12.5523 18 12 18ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-ic9f31-boxStyles-PageAlert"
    >
      <div
        class="css-g6k1ma-boxStyles"
      >
        <h2
          class="css-16u1tz7-boxStyles-PageAlertTitle"
        >
          PageAlert with close button
        </h2>
        <p
          class="css-dbscsh-boxStyles"
        >
          This is a Page alert component.
        </p>
      </div>
      <button
        aria-label="Close"
        class="css-hze38i-BaseButton-PageAlertCloseButton"
        type="button"
      >
        <span>
          <span
            class="css-oobk4c-Button"
          >
            Close
          </span>
          <span
            aria-live="assertive"
          />
        </span>
        <svg
          aria-hidden="true"
          class="css-sbsftc-Button"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
